--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,6 @@
-<h1>Hola Mundo</h1>
+<h1>Hola Aleja</h1>
+<h1>{{(state$ | async).contador}}</h1>
+
+<button (click)="cambiar(1)">Aumentar +1</button>
+<br>
+<button (click)="cambiar(-1)">Reducir -1</button>
